# aoc21-rust

./: .gitignore  Cargo.toml  benchmark.sh  iai_results.txt  readme.md  results.md
.github/workflows/: benchmark.yml  rust.yml
benches/: criterion_benchmarks.rs  iai_benchmarks.rs
src/: common.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.py  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
