[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rayon = "1.5"
itertools = "0.9"
termion = "*"
criterion = "0.3"
iai = "0.1"
gag = "1.0.0"

[[bench]]
name = "iai_benchmarks"
harness = false

[[bench]]
name = "criterion_benchmarks"
harness = false